--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -226,7 +226,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+  font-family: sans-serif;
   font-size: 1em;
 }
 button,
@@ -397,17 +397,17 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+  font-family: sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #000000;
-  background-color: #ffffff;
+  background-color: #292929;
 }
 input,
 button,
 select,
 textarea {
-  font-family: inherit;
+  font-family: sans-serif;
   font-size: inherit;
   line-height: inherit;
 }
@@ -492,7 +492,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+  font-family: sans-serif;
 }
 code {
   padding: 2px 4px;
@@ -6283,7 +6283,7 @@ button.close {
   position: absolute;
   z-index: 1030;
   display: block;
-  font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+  font-family: sans-serif;
   font-size: 12px;
   font-weight: normal;
   line-height: 1.4;
@@ -6390,7 +6390,7 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: 'PT Sans', Helvetica, Arial, sans-serif;
+  font-family: sans-serif;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.42857143;
@@ -6647,7 +6647,7 @@ button.close {
   height: 20px;
   margin-top: -10px;
   line-height: 1;
-  font-family: serif;
+  font-family: sans-serif;
 }
 .carousel-control .icon-prev:before {
   content: '\2039';
