--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -400,7 +400,7 @@ body {
   font-family: sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #000000;
+  color: #fff;
   background-color: #292929;
 }
 input,
