--- a/assets/css/wspr-studio-su.css
+++ b/assets/css/wspr-studio-su.css
@@ -1,5 +1,5 @@
 body{font-family:Open Sans;}
-a{color:#ff0000}
+a{color:#fff}
 .navbar-default .navbar-nav a{font-size:18px;}
 .navbar-default .navbar-nav > li > a{padding:10px 10px;line-height:30px;}
 .navbar{min-height:40px;}
@@ -173,7 +173,7 @@ input[name=query]{border-color:#ff0000;}
 .custom-menu .sub-parent li a{padding-left:5px;}
 
 .custom-menu li{list-style-type:none;display:inline-block}
-.custom-menu .parent a{color:#000;}
+.custom-menu .parent a{color:#fff;}
 .sub-parent:hover{display;block;}
 .custom-menu .sub-parent{display:none;margin-top:10px;position:absolute;background:#fff;border: 1px solid #F87F3D;z-index: 9;padding: 10px;width:100%;max-width:450px;margin-left:-5px;z-index:9999999;}
 
