--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -3319,7 +3319,7 @@ input[type="submit"] {
   margin-bottom: 15px;
 }
 .t3-footer a {
-  color: #000000;
+  color: #fff;
 }
 .t3-footer .t3-footnav .t3-module {
   background: none;
