--- a/assets/css/wspr-studio-su.css
+++ b/assets/css/wspr-studio-su.css
@@ -1,4 +1,5 @@
-body{font-family:Open Sans;}
+body{font-family:'Montserrat';}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 a{color:#fff}
 .navbar-default .navbar-nav a{font-size:18px;}
 .navbar-default .navbar-nav > li > a{padding:10px 10px;line-height:30px;}
@@ -175,7 +176,7 @@ input[name=query]{border-color:#ff0000;}
 .custom-menu li{list-style-type:none;display:inline-block}
 .custom-menu .parent a{color:#fff;}
 .sub-parent:hover{display;block;}
-.custom-menu .sub-parent{display:none;margin-top:10px;position:absolute;background:#fff;border: 1px solid #F87F3D;z-index: 9;padding: 10px;width:100%;max-width:450px;margin-left:-5px;z-index:9999999;}
+.custom-menu .sub-parent{display:none;margin-top:10px;position:absolute;background:#292929;border: 1px solid #F87F3D;z-index: 9;padding: 10px;width:100%;max-width:450px;margin-left:-5px;z-index:9999999;}
 
 .category-view .browse-view .category-product .spacer{
 	display: flex;
